# jinpin

./: .env.example  .gitignore  README.md  design_loop.py  pyproject.toml  render.yaml
docs/superpowers/plans/: 2026-04-01-bootstrap-project-skeleton.md  2026-04-01-jingyantai-harness-mvp.md  2026-04-02-jingyantai-llm-runtime.md  2026-04-03-jingyantai-harness-control-plane.md  2026-04-05-jingyantai-phase1-source-quality.md  2026-04-05-jingyantai-phase2-agent-quality.md  2026-04-05-jingyantai-phase3-report-quality.md
docs/superpowers/specs/: 2026-04-01-jingyantai-design.md  2026-04-02-jingyantai-llm-runtime-design.md  2026-04-03-jingyantai-harness-control-design.md
src/jingyantai/: cli.py  config.py  webapp.py
src/jingyantai/agents/: contracts.py  deepagents_adapter.py  mappers.py  prompts.py  roles.py  schemas.py
src/jingyantai/domain/: models.py  phases.py
src/jingyantai/llm/: contracts.py  deepseek_runner.py  factory.py
src/jingyantai/runtime/: compactor.py  contracts.py  controller.py  judges.py  memory.py  policies.py  quality_rubric.py  reporting.py
src/jingyantai/storage/: run_store.py
tests/: conftest.py  fakes.py  test_agent_schemas_and_mappers.py  test_bootstrap.py  test_cli.py  test_controller.py  test_deepagents_adapter.py  test_deepseek_runner.py  test_domain_models.py  test_fakes_contracts.py  test_judges.py  test_model_factory.py  test_prompts.py  test_reporting.py  test_research_tools.py  test_roles_llm.py  test_run_store.py  test_runtime_contracts.py  test_runtime_memory.py  test_runtime_policies.py  test_webapp.py
(+5 files in other folders)
