[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jingyantai"
version = "0.1.0"
description = "Long-running competitive research harness for small teams."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
deepagents = [
  "deepagents @ git+https://github.com/langchain-ai/deepagents.git",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[project.scripts]
jingyantai = "jingyantai.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
